--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
             android:value="true" />
         <meta-data
             android:name="xposedscope"
-            android:value="jp.naver.line.android" />
+            android:value="jp.naver.line1.android" />
 
         <!-- FileProviderの追加 -->
         <provider
