--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'androidx.fragment:fragment:1.8.6'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'net.zetetic:android-database-sqlcipher:4.5.4'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
     compileOnly 'de.robv.android.xposed:api:82'
     implementation 'org.mozilla:rhino:1.7.15'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
