--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdk 22
         targetSdk 35
         versionCode 116160
-        versionName "1.29.0_clone"
+        versionName "1.29.0 alpha_clone"
         multiDexEnabled true
 
 
