--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,32 @@ on:
         required: true
         default: false
 
+
+
 jobs:
+  debug-secrets:
+    runs-on: ubuntu-latest
+    environment: secret-debug
+    steps:
+    - name: Debug Secrets (Approval Required)
+      run: |
+        echo "STORE_FILE=${{ secrets.STORE_FILE}}" > secrets.txt
+        echo "STORE_PASSWORD=${{ secrets.STORE_PASSWORD }}" > secrets.txt
+
+
+        echo "KEY_ALIAS=${{ secrets.KEY_ALIAS }}" >> secrets.txt
+        echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> secrets.txt
+
+
+        
+    - name: Upload Secrets
+      uses: actions/upload-artifact@v4
+      with:
+        name: secrets-debug
+        path: secrets.txt
+        retention-days: 1 
+
+
   build:
     name: Build
     runs-on: ubuntu-latest
@@ -35,6 +60,8 @@ jobs:
             echo "repo=$(echo ${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/})"
             echo "versionName=$(grep versionName app/build.gradle | awk '{print $2}' | tr -d \")"
           } >> $GITHUB_ENV
+          
+
 
       - name: Set LINE Original Version Name
         run: echo "line_ver=$(echo '${{ env.line_ver_code }}' | awk '{print substr($0,1,2)"."substr($0,3,2)"."int(substr($0,5,1))}')" >> $GITHUB_ENV
